--- a/settings.ini
+++ b/settings.ini
@@ -44,7 +44,8 @@ doc_path = docs
 recursive = False
 
 # Anything shown as '%(...)s' is substituted with that setting automatically
-doc_host =  https://%(user)s.github.io
+#doc_host =  https://%(user)s.github.io
+doc_host = https://jaume-jci.github.io/jaume_nbdev
 #For Enterprise Git pages use:  
 #doc_host = https://pages.github.%(company_name)s.com.  
 
@@ -56,7 +57,7 @@ doc_baseurl = /%(lib_name)s/
 git_url = https://github.com/%(user)s/%(lib_name)s/tree/%(branch)s/
 # For Enterprise Github use:
 #git_url = https://github.%(company_name)s.com/%(repo_name)s/%(lib_name)s/tree/%(branch)s/
-
+#git_url = https://github.com/Jaume-JCI/jaume_nbdev/tree/master
 
 
 lib_path = %(lib_name)s
